// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-checkbox should be invoquable without parameters 1`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={false}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;

exports[`fyndiq-component-checkbox should be programatically checkable 1`] = `
<Checkbox
  checked={true}
  className=""
  color="#7E7E7E"
  disabled={false}
  frame={false}
  indeterminate={false}
  onToggle={[Function]}
>
  <label
    className="
          wrapper
          false
        "
  >
    <input
      checked={true}
      className="
            checkbox
            false
            
          "
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <Checkmark
      className="checkmark"
      color="#7E7E7E"
    >
      <SvgWrapper
        className="checkmark"
        viewBox="0 0 50 50"
      >
        <svg
          className="
      svgWrapper
      checkmark
    "
          viewBox="0 0 50 50"
        >
          <path
            d="M16.8 42c-.4 0-1-.2-1.2-.5l-14-14.2c-.8-.7-.8-1.8 0-2.5.6-.7 1.7-.7 2.4 0l12.8 13 29-29c.7-.7 1.8-.7 2.5 0s.7 1.8 0 2.5L18 41.5c-.2.3-.7.5-1.2.5z"
            fill="#7E7E7E"
            stroke="none"
          />
        </svg>
      </SvgWrapper>
    </Checkmark>
  </label>
</Checkbox>
`;

exports[`fyndiq-component-checkbox should have prop checked 1`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={true}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;

exports[`fyndiq-component-checkbox should have prop color 1`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={true}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="red"
  />
</label>
`;

exports[`fyndiq-component-checkbox should have prop disabled 1`] = `
<label
  className="
          wrapper
          wrapperDisabled
        "
>
  <input
    checked={false}
    className="
            checkbox
            false
            
          "
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;

exports[`fyndiq-component-checkbox should have prop onToggle 1`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={false}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;

exports[`fyndiq-component-checkbox should update its state when clicked on 1`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={true}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;

exports[`fyndiq-component-checkbox should update its state when clicked on 2`] = `
<label
  className="
          wrapper
          false
        "
>
  <input
    checked={false}
    className="
            checkbox
            false
            
          "
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
  />
</label>
`;
